--- a/Resources/views/CRUD/edit_orm_many_association_script.html.twig
+++ b/Resources/views/CRUD/edit_orm_many_association_script.html.twig
@@ -57,7 +57,7 @@ This code manage the many-to-[one|many] association field popup
         jQuery('#{{ id }}').trigger('change');
 
         field_dialog_{{ id }}.dialog('close');
-    }
+    };
 
 
     // handle the add link
@@ -167,7 +167,7 @@ This code manage the many-to-[one|many] association field popup
                         jQuery('a', field_dialog_{{ id }}).die('click');
                         jQuery('form', field_dialog_{{ id }}).die('submit');
                     },
-                    zIndex: 9998,
+                    zIndex: 9998
                 });
             }
         });
@@ -207,7 +207,7 @@ This code manage the many-to-[one|many] association field popup
 
         var data = {
             _xml_http_request: true
-        }
+        };
 
         var form = jQuery(this);
 
@@ -274,7 +274,7 @@ This code manage the many-to-[one|many] association field popup
         });
 
         return false;
-    }
+    };
 
     var field_dialog_{{ id }} = false;
 
